--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Henrique Mattos</h1>
+    <h1>Henrique Chaves</h1>
     <nav>
       <ul id="menu">
         <li><a href="#sobre">Sobre</a></li>
@@ -31,16 +31,12 @@
       <button id="prev">&#10094;</button>
       <div class="carrossel-inner">
         <div class="projeto active">
-          <h3>Projeto 1</h3>
-          <p>Descrição do projeto 1.</p>
+          <h3>Novacore Kernel</h3>
+          <p>É um kernel quentras suporte ao kernelsu, uma solução de root para android via kernel.</p>
         </div>
         <div class="projeto">
-          <h3>Projeto 2</h3>
-          <p>Descrição do projeto 2.</p>
-        </div>
-        <div class="projeto">
-          <h3>Projeto 3</h3>
-          <p>Descrição do projeto 3.</p>
+          <h3>Universal system app installer</h3>
+          <p>Um modulo para o magisk feito para instalar apks como app de sistema.</p>
         </div>
       </div>
       <button id="next">&#10095;</button>
@@ -59,7 +55,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Henrique Mattos</p>
+    <p>&copy; 2025 Henrique Chaves</p>
   </footer>
 
   <script src="script.js"></script>
