--- a/index.html
+++ b/index.html
@@ -38,7 +38,19 @@
           <h3>Universal system app installer</h3>
           <p>Um modulo para o magisk feito para instalar apks como app de sistema.</p>
         </div>
+        <div class="projeto">
+          <h3>digispark scrips</h3>
+          <p>Um lote de scripts base para placas digispark feitos para serem modificados conforme o usuário queira.</p>
+        </div>
       </div>
+      <div class="projeto">
+          <h3>Kernel compiler</h3>
+          <p>Um compilador de kernel automatico para diferentes arquiteturas e dispositivos.</p>
+        </div>
+      <div class="projeto">
+          <h3>meme calculator</h3>
+          <p>A famosa calculadora dos memes feita em python.</p>
+        </div>
       <button id="next">&#10095;</button>
     </div>
   </section>
