--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="carrossel-inner">
         <div class="projeto active">
           <h3>Novacore Kernel</h3>
-          <p>É um kernel quentras suporte ao kernelsu, uma solução de root para android via kernel.</p>
+          <p>É um kernel que tras suporte ao kernelsu, uma solução de root para android via kernel.</p>
         </div>
         <div class="projeto">
           <h3>Universal system app installer</h3>
