Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div class="projeto">
           <h3>meme calculator</h3>
           <p>A famosa calculadora dos memes feita em python.</p>
+         </div>
         </div>
       <button id="next">&#10095;</button>
     </div>
