Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <div class="botoes-contato">
       <a href="https://drive.google.com/drive/folders/1k7mJwBy7egEE-h_HCGNXxc6mR8M9QGmY" class="botao" target="_blank">Currículo & Certificados</a>
       <a href="https://www.linkedin.com/in/henrique-chaves-448288300?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="botao linkedin" target="_blank">LinkedIn</a>
+      <a
+href="https://github.com/hc8841" class="botao github" target="_blank">Github</a>
     </div>
   </section>
 
