--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <img src="images/sua-foto.jpg" alt="Minha Foto" class="profile-pic">
-    <h1>Seu Nome</h1>
+    <h1>Henrique Chaves</h1>
     <p>Desenvolvedor | Linux | Android | Kernel | Cibersegurança</p>
   </header>
 
@@ -77,8 +77,7 @@
 
   <section class="contact">
     <h2>Contato</h2>
-    <p>Email: seuemail@exemplo.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/seuusuario" target="_blank">seuusuario</a></p>
+    <p>Email: henriquemattos841@gmail.com</p>
   </section>
 
   <footer>
