--- a/index.html
+++ b/index.html
@@ -1,86 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfólio Pessoal</title>
+  <title>hc8841@portfolio:~$</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Henrique Chaves</h1>
-    <p>Desenvolvedor | Linux | Android | Kernel | Cibersegurança</p>
-  </header>
-
-  <section class="about">
-    <h2>Sobre mim</h2>
-    <p>Sou apaixonado por tecnologia, com foco em sistemas Android, kernels personalizados e automação. Sempre explorando maneiras criativas e eficientes de resolver problemas, buscando aprendizado contínuo.</p>
-  </section>
-
-  <section class="projects">
-    <h2>Projetos</h2>
-
-    <div class="project-card">
-      <h3>Universal System App Installer</h3>
-      <p>Módulo Magisk que instala APKs como apps de sistema de forma automatizada.</p>
+  <div class="terminal">
+    <div id="terminal-output">
+      <p class="prompt">hc8841@portfolio:~$ <span id="typed"></span></p>
     </div>
+    <input type="text" id="terminal-input" autofocus />
+  </div>
 
-    <div class="project-card">
-      <h3>Novacore Kernel</h3>
-      <p>Kernel customizado para o Moto G9 Play com suporte ao KSU.</p>
-    </div>
-
-    <div class="project-card">
-      <h3>Kernel Compiler</h3>
-      <p>Compilador universal de kernel para facilitar o processo de build.</p>
-    </div>
-
-    <div class="project-card">
-      <h3>Digispark Scripts</h3>
-      <p>Conjunto de scripts básicos para automação com Digispark.</p>
-    </div>
-
-    <div class="project-card">
-      <h3>Meme Calculator</h3>
-      <p>Calculadora meme que junta os números em vez de somar. 🧠</p>
-    </div>
-  </section>
-
-  <section class="experience">
-    <h2>Experiências Profissionais</h2>
-
-    <ul>
-      <li><strong>Condor S/A</strong> – Auxiliar de carga e descarga</li>
-      <li><strong>Raia Drogasil</strong> – Atendente 1</li>
-      <li><strong>SDB Comércio de Alimentos</strong> – Caixa</li>
-    </ul>
-  </section>
-
-  <section class="education">
-    <h2>Formações e Cursos</h2>
-
-    <ul>
-      <li><strong>IFC</strong> – Técnico em Informática</li>
-      <li><strong>IFC</strong> – Engenharia da Computação (Cursando)</li>
-      <li><strong>IBSEC</strong> – Boas Práticas de Cibersegurança</li>
-      <li><strong>CBMSC</strong> – CBAE</li>
-      <li><strong>Jumper</strong> – Inglês Básico</li>
-      <li><strong>Jumper</strong> – Pacote Office</li>
-    </ul>
-  </section>
-
-  <section class="manifesto">
-    <h2>Manifesto de Reforma do Ensino</h2>
-    <p>Leia meu <a href="main.html" target="_blank">manifesto educacional</a> propondo melhorias no sistema de ensino.</p>
-  </section>
-
-  <section class="contact">
-    <h2>Contato</h2>
-    <p>Email: henriquemattos841@gmail.com</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Seu Nome</p>
-  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
