--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
   <div class="terminal">
-    <div id="terminal-output">
-      <p class="prompt">hc8841@portfolio:~$ <span id="typed"></span></p>
+    <div id="terminal-line">
+      <span class="prompt">hc8841@portfolio:~$</span>
+      <input id="terminal-input" autocomplete="off" autofocus />
     </div>
+
     <input type="text" id="terminal-input" autofocus />
   </div>
 
