Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ const input = document.getElementById('input');
 const commands = {
   help: `
 Comandos disponíveis:
-  about       - Saiba mais sobre Henrique Chaves
-  skills      - Veja minhas habilidades técnicas e soft skills
-  experience  - Minhas experiências profissionais
-  contact     - Contato e redes sociais
+  about        - Saiba mais sobre Henrique Chaves
+  skills       - Veja minhas habilidades técnicas e soft skills
+  experience   - Minhas experiências profissionais
+  contact      - Contato e redes sociais
   certificates - Meus certificados
-  clear       - Limpa a tela
+  clear        - Limpa a tela
 `,
   about: `
 Olá! Eu sou Henrique Eslabão da Fonseca Chaves, 19 anos.
@@ -83,15 +83,15 @@ Experiências profissionais:
 Obs: Não foram cargos de TI, mas me ensinaram disciplina, organização e atendimento ao público.
 `,
   contact: `
-Email principal: henriquemattos841@gmail.com
-Email secundário: henriquemattos841@tutamail.com
-Telefone: +55 47 99673-6277
-GitHub: https://github.com/hc8841
-LinkedIn: https://www.linkedin.com/in/henrique-chaves-448288300?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+Email principal: <a href="mailto:henriquemattos841@gmail.com">henriquemattos841@gmail.com</a>
+Email secundário: <a href="mailto:henriquemattos841@tutamail.com">henriquemattos841@tutamail.com</a>
+Telefone: <a href="tel:+5547996736277">+55 47 99673-6277</a>
+GitHub: <a href="https://github.com/hc8841" target="_blank">github.com/hc8841</a>
+LinkedIn: <a href="https://www.linkedin.com/in/henrique-chaves-448288300?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">linkedin.com/in/henrique-chaves</a>
 `,
   certificates: `
 Meus certificados podem ser acessados aqui:
-https://drive.google.com/drive/folders/1k7mJwBy7egEE-h_HCGNXxc6mR8M9QGmY
+<a href="https://drive.google.com/drive/folders/1k7mJwBy7egEE-h_HCGNXxc6mR8M9QGmY" target="_blank">Google Drive - Certificados</a>
 `,
   sudo: `
 Acesso negado! 😎
