--- a/index.html
+++ b/index.html
@@ -4,34 +4,36 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Portfólio Henrique Chaves</title>
-<!-- Bootstrap CSS -->
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link id="favicon" rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>$</text></svg>">
+
+<link id="favicon" rel="icon"
+  href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>$</text></svg>">
+
 <style>
   body {
     background: black;
     color: #00ff00;
     font-family: monospace;
     margin: 0;
-    padding: 0;
   }
   #terminal {
     padding: 20px;
   }
   .line {
-    display: block;
+    white-space: pre-wrap;
   }
-  .prompt {
-    display: inline;
+  #input-line {
+    display: flex;
+    gap: 5px;
   }
-  #input {
+  #cmd {
     background: black;
     border: none;
     color: inherit;
-    font-family: monospace;
-    font-size: 1em;
     outline: none;
-    width: 90%;
+    flex: 1;
+    font-family: monospace;
   }
   a {
     color: inherit;
@@ -39,126 +41,124 @@
   }
 </style>
 </head>
+
 <body>
 <div id="terminal" class="container-fluid">
-  <div class="line">Bem-vindo ao portfólio de Henrique Chaves. Digite <strong>help</strong> para ver os comandos disponíveis.</div>
-  <div class="line"><span class="prompt">></span> <input id="input" autofocus></div>
+  <div class="line">Bem-vindo ao portfólio de Henrique Chaves. Digite <b>help</b>.</div>
+
+  <div id="input-line">
+    <span>&gt;</span>
+    <input id="cmd" autofocus>
+  </div>
 </div>
 
-<!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script>
-$(document).ready(function() {
+$(function () {
+
   const terminal = $("#terminal");
-  let easterActive = false;
+  const input = $("#cmd");
+  const inputLine = $("#input-line");
+  let sudoMode = false;
 
   const commands = {
     help: `
 Comandos disponíveis:
-  about        - Saiba mais sobre Henrique Chaves
-  skills       - Veja minhas habilidades técnicas e soft skills
-  experience   - Minhas experiências profissionais
-  contact      - Contato e redes sociais
-  certificates - Meus certificados
-  clear        - Limpa a tela
-  exit         - Sai do modo sudo (se ativo)
+  about
+  skills
+  experience
+  contact
+  certificates
+  clear
+  exit
 `,
     about: `
-Olá! Eu sou Henrique Eslabão da Fonseca Chaves, 19 anos.
-Formado em Técnico em Informática em 2023, sempre fui apaixonado por tecnologia, especialmente hardware e programação low level.
-
-Curiosidade: Apesar de ainda não ter experiência formal em TI, meu interesse e dedicação pela área são enormes!
+Henrique Eslabão da Fonseca Chaves, 19 anos.
+Técnico em Informática (2023).
+Interesse forte em hardware, low level e segurança.
 `,
     skills: `
-Habilidades técnicas:
-  - Hardware e manutenção de PCs
-  - Programação básica e lógica
-  - Conhecimento em sistemas e redes domésticas
-  - Segurança da informação (interesse e estudo)
+- Hardware e manutenção
+- Lógica de programação
+- Redes domésticas
+- Interesse em infosec
 
 Soft skills:
-  - Liderança nata, gosto de organizar e resolver problemas
-  - Raciocínio lógico e pensamento crítico
-  - Trabalho em equipe e comunicação clara
+- Liderança
+- Pensamento crítico
+- Comunicação
 `,
     experience: `
-Experiências profissionais:
-  Condor S/A            - Ajudante de carga e descarga
-  Raia Drogasil S.A     - Atendente 1 (caixa, reposição e ajuste de preços)
-  SDB Comércio de Alimentos Ltda - Caixa
-
-Obs: Não foram cargos de TI, mas me ensinaram disciplina, organização e atendimento ao público.
+Condor S/A - Carga e descarga
+Raia Drogasil S.A - Atendente 1
+SDB Comércio de Alimentos - Caixa
 `,
     contact: `
-Email principal: <a href="mailto:henriquemattos841@gmail.com">henriquemattos841@gmail.com</a>
-Email secundário: <a href="mailto:henriquemattos841@tutamail.com">henriquemattos841@tutamail.com</a>
+Email: <a href="mailto:henriquemattos841@gmail.com">henriquemattos841@gmail.com</a>
+Email: <a href="mailto:henriquemattos841@tutamail.com">henriquemattos841@tutamail.com</a>
 Telefone: <a href="tel:+5547996736277">+55 47 99673-6277</a>
 GitHub: <a href="https://github.com/hc8841" target="_blank">github.com/hc8841</a>
-LinkedIn: <a href="https://www.linkedin.com/in/henrique-chaves-448288300?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">linkedin.com/in/henrique-chaves</a>
+LinkedIn: <a href="https://linkedin.com/in/henrique-chaves-448288300" target="_blank">linkedin.com/in/henrique-chaves</a>
 `,
     certificates: `
-Meus certificados podem ser acessados aqui:
-<a href="https://drive.google.com/drive/folders/1k7mJwBy7egEE-h_HCGNXxc6mR8M9QGmY" target="_blank">Google Drive - Certificados</a>
+<a href="https://drive.google.com/drive/folders/1k7mJwBy7egEE-h_HCGNXxc6mR8M9QGmY" target="_blank">
+Google Drive - Certificados
+</a>
 `,
     sudo: `
-Acesso negado! 😎
-Mas se fosse um sudo de verdade, talvez você tivesse que me pagar um café primeiro ☕
+Acesso negado.
+Você realmente achou que teria root aqui?
 `
   };
 
-  function appendLine(text) {
-    $("<div>").addClass("line").html(text.replace(/\n/g,"<br>")).insertBefore("#input");
-    scrollTerminal();
-  }
-
-  function scrollTerminal() {
+  function print(text) {
+    $("<div class='line'>").html(text).insertBefore(inputLine);
     terminal.scrollTop(terminal[0].scrollHeight);
   }
 
-  function createInput() {
-    const inputLine = $('<div class="line"><span class="prompt">></span> <input id="input"></div>');
-    terminal.append(inputLine);
-    $("#input").focus();
-    $("#input").on('keydown', handleInput);
+  function setFavicon(char) {
+    $("#favicon").attr(
+      "href",
+      `data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>${char}</text></svg>`
+    );
   }
 
-  function setFavicon(iconChar) {
-    const favicon = document.getElementById('favicon');
-    favicon.href = `data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>${iconChar}</text></svg>`;
-  }
+  input.on("keydown", function (e) {
+    if (e.key !== "Enter") return;
 
-  function handleInput(e) {
-    if(e.key === 'Enter') {
-      const cmd = $(this).val().trim().toLowerCase();
-      appendLine('> ' + $(this).val());
+    const cmd = input.val().trim().toLowerCase();
+    print(`&gt; ${cmd}`);
+    input.val("");
 
-      if(cmd === 'clear') {
-        terminal.empty();
-        appendLine('Bem-vindo ao portfólio de Henrique Chaves. Digite <strong>help</strong> para ver os comandos disponíveis.');
-        createInput();
-      } else if(cmd === 'exit' && easterActive) {
-        easterActive = false;
-        terminal.css('color', '#00ff00');
-        setFavicon('$');
-        appendLine('Saindo do modo sudo. Terminal normal restaurado.');
-      } else if(cmd === 'sudo') {
-        easterActive = true;
-        terminal.css('color', 'red');
-        setFavicon('#');
-        appendLine(commands.sudo);
-      } else if(commands[cmd]) {
-        appendLine(commands[cmd]);
-      } else {
-        appendLine(`Comando não encontrado: ${cmd}. Digite help para a lista de comandos.`);
-      }
-
-      // Remove o input antigo e cria um novo sempre
-      $(this).remove();
-      createInput();
+    if (cmd === "clear") {
+      terminal.find(".line").remove();
+      print("Terminal limpo.");
+      return;
     }
-  }
 
-  $("#input").on('keydown', handleInput);
+    if (cmd === "sudo") {
+      sudoMode = true;
+      terminal.css("color", "red");
+      setFavicon("#");
+      print(commands.sudo);
+      return;
+    }
+
+    if (cmd === "exit" && sudoMode) {
+      sudoMode = false;
+      terminal.css("color", "#00ff00");
+      setFavicon("$");
+      print("Modo sudo encerrado.");
+      return;
+    }
+
+    if (commands[cmd]) {
+      print(commands[cmd]);
+    } else {
+      print("Comando não encontrado.");
+    }
+  });
+
 });
 </script>
 </body>
