--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Henrique Chaves</title>
+<title>HenriqueOS</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -11,174 +11,102 @@
   href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>$</text></svg>">
 
 <style>
-  body {
-    background: black;
-    color: #00ff00;
-    font-family: monospace;
-    margin: 0;
-  }
-  #terminal {
-    padding: 20px;
-  }
-  .line {
-    white-space: pre-wrap;
-  }
-  #input-line {
-    display: flex;
-    gap: 6px;
-  }
-  #prompt {
-    min-width: 10px;
-  }
-  #cmd {
-    background: black;
-    border: none;
-    color: inherit;
-    outline: none;
-    flex: 1;
-    font-family: monospace;
-  }
-  a {
-    color: inherit;
-    text-decoration: underline;
-  }
+  body { background:black; color:#00ff00; font-family:monospace; margin:0 }
+  #terminal { padding:20px }
+  .line { white-space:pre-wrap }
+  #input-line { display:flex; gap:6px }
+  #prompt { min-width:10px }
+  #cmd { background:black; border:none; color:inherit; outline:none; flex:1 }
+  a { color:inherit; text-decoration:underline }
 </style>
 </head>
 
 <body>
-<div id="terminal" class="container-fluid">
-  <div class="line">HenriqueOS v1.0 — digite <b>help</b></div>
-
-  <div id="input-line">
-    <span id="prompt">$</span>
-    <input id="cmd" autofocus>
-  </div>
-</div>
+<div id="terminal" class="container-fluid"></div>
 
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script>
 $(function () {
 
   const terminal = $("#terminal");
-  const input = $("#cmd");
-  const prompt = $("#prompt");
-  const inputLine = $("#input-line");
-
   let sudoMode = false;
-  let history = [];
-  let historyIndex = 0;
+  let history = [], historyIndex = 0;
 
-  const commands = {
-    help: `
-Comandos disponíveis:
-  about
-  skills
-  experience
-  contact
-  certificates
-  whoami
-  neofetch
-  clear
-  exit
-`,
-    about: `
-Henrique Eslabão da Fonseca Chaves
-19 anos — Técnico em Informática (2023)
-
-Apaixonado por hardware, low level e segurança da informação.
-`,
-    skills: `
-Hardware e manutenção
-Lógica de programação
-Redes domésticas
-Segurança da informação (estudos)
-
-Soft skills:
-- Liderança
-- Pensamento crítico
-- Comunicação
-`,
-    experience: `
-Condor S/A — carga e descarga
-Raia Drogasil S.A — atendente 1
-SDB Comércio de Alimentos — caixa
-`,
-    contact: `
-Email: <a href="mailto:henriquemattos841@gmail.com">henriquemattos841@gmail.com</a>
-Email: <a href="mailto:henriquemattos841@tutamail.com">henriquemattos841@tutamail.com</a>
-Telefone: <a href="tel:+5547996736277">+55 47 99673-6277</a>
-GitHub: <a href="https://github.com/hc8841" target="_blank">github.com/hc8841</a>
-LinkedIn: <a href="https://linkedin.com/in/henrique-chaves-448288300" target="_blank">linkedin.com/in/henrique-chaves</a>
-`,
-    certificates: `
-<a href="https://drive.google.com/drive/folders/1k7mJwBy7egEE-h_HCGNXxc6mR8M9QGmY" target="_blank">
-Google Drive — Certificados
-</a>
-`,
-    sudo: `
-Acesso negado.
-Mas agora você chamou atenção.
-`,
-    whoami: `
-henrique
-`,
-    neofetch: `
-       ██████╗ ███████╗
-       ██╔══██╗██╔════╝
-       ██████╔╝███████╗
-       ██╔═══╝ ╚════██║
-       ██║     ███████║
-       ╚═╝     ╚══════╝
-
-OS: HenriqueOS
-User: henrique
-Shell: fakebash
-Uptime: desde que você abriu a página
-`
-  };
+  const files = [
+    "certificates/",
+    "kernel_panic.txt",
+    "deprecated_code.c",
+    "sudo_secrets/",
+    "coffee_dependency.md",
+    "stackoverflow.log",
+    "segfault_notes.txt",
+    "todo_fix_later.sh"
+  ];
 
   function print(text) {
-    $("<div class='line'>").html(text).insertBefore(inputLine);
+    $("<div class='line'>").html(text).appendTo(terminal);
     terminal.scrollTop(terminal[0].scrollHeight);
   }
 
-  function setFavicon(char) {
-    $("#favicon").attr(
-      "href",
-      `data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>${char}</text></svg>`
+  function setFavicon(c) {
+    $("#favicon").attr("href",
+      `data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>${c}</text></svg>`
     );
   }
 
-  input.on("keydown", function (e) {
+  /* ---------- BOOT ---------- */
+  const boot = [
+    "HenriqueOS bootloader v1.0",
+    "Initializing hardware...",
+    "Loading kernel modules...",
+    "Mounting /dev/sda1...",
+    "Starting fakebash...",
+    "",
+    "System ready. Type 'help'.",
+    ""
+  ];
+
+  let i = 0;
+  function bootSequence() {
+    if (i < boot.length) {
+      print(boot[i++]);
+      setTimeout(bootSequence, 350);
+    } else {
+      startTerminal();
+    }
+  }
+
+  /* ---------- TERMINAL ---------- */
+  function startTerminal() {
+    terminal.append(`
+      <div id="input-line">
+        <span id="prompt">$</span>
+        <input id="cmd" autofocus>
+      </div>
+    `);
+    $("#cmd").on("keydown", handleInput).focus();
+  }
+
+  function handleInput(e) {
+    const input = $("#cmd");
 
     if (e.key === "ArrowUp") {
-      if (historyIndex > 0) {
-        historyIndex--;
-        input.val(history[historyIndex]);
-      }
+      if (historyIndex > 0) input.val(history[--historyIndex]);
       return;
     }
 
     if (e.key === "ArrowDown") {
-      if (historyIndex < history.length - 1) {
-        historyIndex++;
-        input.val(history[historyIndex]);
-      } else {
-        input.val("");
-      }
+      if (historyIndex < history.length - 1) input.val(history[++historyIndex]);
+      else input.val("");
       return;
     }
 
     if (e.key !== "Enter") return;
 
     const cmd = input.val().trim().toLowerCase();
-    print(`${prompt.text()} ${cmd}`);
-
-    if (cmd) {
-      history.push(cmd);
-      historyIndex = history.length;
-    }
-
+    print(`${$("#prompt").text()} ${cmd}`);
+    if (cmd) history.push(cmd);
+    historyIndex = history.length;
     input.val("");
 
     if (cmd === "clear") {
@@ -186,31 +114,52 @@ Uptime: desde que você abriu a página
       return;
     }
 
+    if (cmd === "ls") {
+      print(files.join("   "));
+      return;
+    }
+
     if (cmd === "sudo") {
       sudoMode = true;
-      terminal.css("color", "red");
-      prompt.text("#");
+      terminal.css("color","red");
+      $("#prompt").text("#");
       setFavicon("#");
-      print(commands.sudo);
+      print("permission denied. but nice try.");
       return;
     }
 
     if (cmd === "exit" && sudoMode) {
       sudoMode = false;
-      terminal.css("color", "#00ff00");
-      prompt.text("$");
+      terminal.css("color","#00ff00");
+      $("#prompt").text("$");
       setFavicon("$");
-      print("Modo sudo encerrado.");
+      print("leaving sudo mode.");
       return;
     }
 
-    if (commands[cmd]) {
-      print(commands[cmd]);
-    } else {
-      print("Comando não encontrado.");
-    }
-  });
+    const responses = {
+      help: `
+commands:
+  help about skills experience contact certificates
+  whoami neofetch ls clear exit
+`,
+      whoami: "henrique",
+      neofetch: `
+HenriqueOS
+User: henrique
+Shell: fakebash
+Uptime: since page load
+`,
+      about: "Henrique Chaves — técnico em informática, hardware & low level.",
+      skills: "hardware | low level | infosec | curiosity-driven",
+      experience: "Condor | Raia Drogasil | SDB Alimentos",
+      contact: "github.com/hc8841 | linkedin.com/in/henrique-chaves"
+    };
 
+    print(responses[cmd] || "command not found.");
+  }
+
+  bootSequence();
 });
 </script>
 </body>
