--- a/index.html
+++ b/index.html
@@ -10,68 +10,48 @@
   href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>$</text></svg>">
 
 <style>
-body { background:black; color:#00ff00; font-family:monospace; margin:0 }
-#terminal { padding:20px }
-.line { white-space:pre-wrap }
-#input-line { display:flex; gap:6px; align-items:center }
-#cmd {
-  background:black;
-  color:inherit;
-  border:none;
-  outline:none;
-  flex:1;
-  font-family:monospace;
-  caret-color:#00ff00;
-}
-#input-line span { min-width:10px; color:inherit }
-a { color:inherit; text-decoration:underline }
+body { background:black; color:#00ff00; font-family:monospace; margin:0; }
+#terminal { padding:20px; white-space:pre-wrap; overflow-y:auto; height:100vh; }
+.cursor { display:inline-block; width:10px; background:#00ff00; animation:blink 1s step-start infinite; margin-left:2px; }
+@keyframes blink { 50% { background:transparent; } }
+.line { display:block; }
+a { color:inherit; text-decoration:underline; }
 </style>
 </head>
 
 <body>
-<div id="terminal" class="container-fluid"></div>
+<div id="terminal"></div>
 
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script>
-$(function () {
+$(function(){
 
-const terminal = $("#terminal");
-let sudoMode = false;
-let history = [], historyIndex = 0;
-
-const files = {
-  "kernel_panic.txt": "Kernel panic - not syncing: curiosity overflow.",
-  "coffee_dependency.md": "System cannot boot without caffeine.",
-  "stackoverflow.log": "Searched same error 37 times. Solution ignored.",
-  "deprecated_code.c": "// TODO: rewrite this in Rust",
-  "todo_fix_later.sh": "#!/bin/bash\necho \"One day...\"",
-  "segfault_notes.txt": "Segmentation fault, investigate pointer usage.",
+const terminal=$("#terminal");
+let sudoMode=false;
+let history=[], historyIndex=0;
+let currentLine="";
+let cursor=$("<span class='cursor'></span>");
+let commands=[
+  "about","skills","experience","contact","certificates",
+  "whoami","neofetch","ls","cat","clear","shutdown now","exit"
+];
+const files={
+  "kernel_panic.txt":"Kernel panic - not syncing: curiosity overflow.",
+  "coffee_dependency.md":"System cannot boot without caffeine.",
+  "stackoverflow.log":"Searched same error 37 times. Solution ignored.",
+  "deprecated_code.c":"// TODO: rewrite this in Rust",
+  "todo_fix_later.sh":"#!/bin/bash\necho \"One day...\"",
+  "segfault_notes.txt":"Segmentation fault, investigate pointer usage."
 };
-
-const responses = {
-  help: `
-Comandos disponíveis:
-  about
-  skills
-  experience
-  contact
-  certificates
-  whoami
-  neofetch
-  ls
-  cat <arquivo>
-  clear
-  shutdown now
-  exit
-`,
-  about: `
+const responses={
+  about:`
 Olá! Eu sou Henrique Eslabão da Fonseca Chaves, 19 anos.
 Formado em Técnico em Informática em 2023.
 Sempre fui apaixonado por tecnologia, especialmente hardware e low level.
 
 Curiosidade: Apesar de ainda não ter experiência formal em TI, meu interesse e dedicação pela área são enormes!
 `,
-  skills: `
+  skills:`
 Habilidades técnicas:
   - Hardware e manutenção de PCs
   - Programação básica e lógica
@@ -83,48 +63,36 @@ Soft skills:
   - Raciocínio lógico e pensamento crítico
   - Trabalho em equipe e comunicação clara
 `,
-  experience: `
+  experience:`
 Experiências profissionais:
   Condor S/A — Ajudante de carga e descarga
   Raia Drogasil S.A — Atendente 1
   SDB Comércio de Alimentos Ltda — Caixa
-
-Obs: Não foram cargos de TI, mas me ensinaram disciplina, organização e atendimento ao público.
 `,
-  contact: `
+  contact:`
 Email principal: <a href="mailto:henriquemattos841@gmail.com">henriquemattos841@gmail.com</a>
 Email secundário: <a href="mailto:henriquemattos841@tutamail.com">henriquemattos841@tutamail.com</a>
 Telefone: <a href="tel:+5547996736277">+55 47 99673-6277</a>
 GitHub: <a href="https://github.com/hc8841" target="_blank">github.com/hc8841</a>
 LinkedIn: <a href="https://linkedin.com/in/henrique-chaves-448288300" target="_blank">linkedin.com/in/henrique-chaves</a>
 `,
-  certificates: `
+  certificates:`
 Meus certificados podem ser acessados aqui:
 <a href="https://drive.google.com/drive/folders/1k7mJwBy7egEE-h_HCGNXxc6mR8M9QGmY" target="_blank">Google Drive - Certificados</a>
 `,
-  whoami: "henrique",
-  neofetch: `
-HenriqueOS
+  whoami:"henrique",
+  neofetch:`HenriqueOS
 User: henrique
 Shell: fakebash
-Uptime: since page load
-`
+Uptime: since page load`
 };
 
-function print(text) {
-  $("<div class='line'>").html(text).appendTo(terminal);
-  terminal.scrollTop(terminal[0].scrollHeight);
-}
+function print(text){ $("<div class='line'>").html(text).appendTo(terminal); terminal.scrollTop(terminal[0].scrollHeight); }
+function setFavicon(c){ $("#favicon").attr("href",`data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>${c}</text></svg>`); }
 
-function setFavicon(c) {
-  $("#favicon").attr("href",
-    `data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text x=%220%22 y=%2212%22 font-size=%2216%22>${c}</text></svg>`
-  );
-}
-
-/* ---------- BOOT ---------- */
-const boot = [
-  "HenriqueOS bootloader v1.3",
+/* Boot */
+const boot=[
+  "HenriqueOS bootloader v2.0",
   "Initializing hardware...",
   "Loading kernel modules...",
   "Mounting /dev/sda1...",
@@ -133,49 +101,50 @@ const boot = [
   "System ready. Type 'help'.",
   ""
 ];
-
 let i=0;
-function bootSequence() {
-  if(i<boot.length){
-    print(boot[i++]);
-    setTimeout(bootSequence, 300);
-  } else newPrompt();
+function bootSequence(){ 
+  if(i<boot.length){ print(boot[i++]); setTimeout(bootSequence,300); } 
+  else newPrompt();
 }
 
-/* ---------- PROMPT ---------- */
 function newPrompt(){
   const prompt = sudoMode ? "#" : "$";
-  const line = $(`
-    <div id="input-line">
-      <span>${prompt}</span>
-      <input class="cmd" autocomplete="off">
-    </div>
-  `);
+  currentLine="";
+  let line=$("<div class='line'></div>");
+  line.append(`<span>${prompt} </span>`);
+  line.append(cursor);
   terminal.append(line);
-  line.find("input").focus().on("keydown",handleInput);
   terminal.scrollTop(terminal[0].scrollHeight);
 }
 
-function handleInput(e){
-  const input=$(this);
-  if(e.key==="ArrowUp"){ if(historyIndex>0) input.val(history[--historyIndex]); return; }
-  if(e.key==="ArrowDown"){ if(historyIndex<history.length-1) input.val(history[++historyIndex]); else input.val(""); return; }
-  if(e.key!=="Enter") return;
+$(document).keydown(function(e){
+  if(e.key.length===1){ currentLine+=e.key; updateLine(); }
+  else if(e.key==="Backspace"){ currentLine=currentLine.slice(0,-1); updateLine(); e.preventDefault(); }
+  else if(e.key==="Enter"){ executeCommand(currentLine.trim()); currentLine=""; e.preventDefault(); }
+  else if(e.key==="ArrowUp"){ if(historyIndex>0){ currentLine=history[--historyIndex]; updateLine(); } e.preventDefault();}
+  else if(e.key==="ArrowDown"){ if(historyIndex<history.length-1){ currentLine=history[++historyIndex];}else{currentLine="";} updateLine(); e.preventDefault();}
+});
 
-  const raw=input.val();
-  const cmd=raw.trim().toLowerCase();
-  if(raw) history.push(raw);
+function updateLine(){
+  cursor.prevAll().remove();
+  cursor.before(document.createTextNode(currentLine));
+  terminal.scrollTop(terminal[0].scrollHeight);
+}
+
+function executeCommand(cmd){
+  if(cmd!=="") history.push(cmd);
   historyIndex=history.length;
-
-  input.parent().replaceWith(`<div class="line">${sudoMode?"#":"$"} ${raw}</div>`);
-
-  if(cmd==="clear"){ terminal.find(".line").remove(); newPrompt(); return; }
+  let line=$("<div class='line'></div>").text((sudoMode?"#":"$")+" "+cmd);
+  cursor.before(line.contents());
+  cursor.remove();
+  cursor=$("<span class='cursor'></span>");
+  terminal.append(cursor);
+  
+  if(cmd==="clear"){ terminal.empty(); cursor=$("<span class='cursor'></span>"); terminal.append(cursor); newPrompt(); return; }
   if(cmd==="ls"){ print(Object.keys(files).join("   ")); newPrompt(); return; }
-  if(cmd.startsWith("cat ")){
-    const file=cmd.split(" ")[1];
-    print(files[file] || "cat: file not found");
-    newPrompt();
-    return;
+  if(cmd.startsWith("cat ")){ 
+    const f=cmd.split(" ")[1]; 
+    print(files[f]||"cat: file not found"); newPrompt(); return; 
   }
   if(cmd==="sudo"){ sudoMode=true; terminal.css("color","red"); setFavicon("#"); print("Permission denied. You are now suspicious."); newPrompt(); return; }
   if(cmd==="exit" && sudoMode){ sudoMode=false; terminal.css("color","#00ff00"); setFavicon("$"); print("Exited sudo mode."); newPrompt(); return; }
@@ -186,7 +155,6 @@ function handleInput(e){
 }
 
 bootSequence();
-
 });
 </script>
 </body>
